--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Home | Angelo Sadang..</title>
+    <title>Home | Angelo Sadang</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -88,6 +88,7 @@
         <div class="home-hero__info">
           <p class="text-primary">
            Welcome to my portfolio, where you can explore my latest projects and see how I bring ideas to life on the web.
+           This is a sample content.
           </p>
         </div>
         <div class="home-hero__cta">
